# haste-lang

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  main.cpp  main.haste  premake5.lua
c-src/: termcolor.zig
examples/: hello.haste  hello_world.haste  operators.haste  parsing.haste  primitive_type.haste  statements.haste  variables.haste
include/: Analyser.hpp  Compiler.hpp  Environnement.hpp  Parser.hpp  Program.hpp  Reporter.hpp  Scanner.hpp  TranslationUnit.hpp  common.hpp  macros.hpp  tokens.hpp
include/AST/: Expressions.hpp  Statments.hpp  TypeNode.hpp  sigma.hpp
include/Analysis/: Context.hpp  Symbol.hpp  SymbolTable.hpp  Types.hpp
src/: #main.zig#  AST.zig  Compiler.cpp  Compiler.zig  DataStructure.zig  FrontEnd.zig  Meta.zig  Parser.cpp  Program.cpp  Reporter.cpp  Reporter.zig  Scanner.cpp  Statments.cpp  Token.zig  TranslationUnit.cpp  TranslationUnit.zig  main.zig  termcolor.zig
src/AST/: ASTExpressions.cpp  ASTStatments.cpp  ASTTypeNode.cpp  Expr.zig  Stmt.zig  Type.zig
src/AST/Expressions/: ArrayExpression.cpp  AssignExpression.cpp  CallExpression.cpp  IdentifierExpression.cpp  SubscriptingExpression.cpp
src/AST/Statments/: FunctionDef.cpp  LetDef.cpp  ReturnStatement.cpp
src/Analysis/: Context.cpp  Symbol.cpp  SymbolTable.cpp  Types.cpp
src/DataStructure/: LinkedList.zig  StringView.zig
src/FrontEnd/: Parser.zig  Scanner.zig
src/FrontEnd/Parsing/: declaration.zig  expression.zig  statement.zig  types.zig
src/FrontEnd/Parsing/declarations/: function.zig  let.zig
src/FrontEnd/Parsing/statements/: _return.zig  block.zig
src/Parsing/: declaration.cpp  expression.cpp  statement.cpp  types.cpp
src/Parsing/declarations/: functions.cpp  let_statement.cpp
src/Parsing/statements/: blocks.cpp  if_condition.cpp  retrun.cpp
test/: main.cpp
